# sketch2duckdb

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
src/: sketch2_bitset_filter.cpp  sketch2_close.cpp  sketch2_dataset.cpp  sketch2_extension.cpp  sketch2_knn.cpp  sketch2_open.cpp
src/include/: sketch2_bitset_filter.hpp  sketch2_close.hpp  sketch2_dataset.hpp  sketch2_extension.hpp  sketch2_knn.hpp  sketch2_open.hpp
test/: README.md  generate_sql_fixture.py
test/python/: README.md  conftest.py  sketch2_test_utils.py  test_sketch2_duckdb_integration.py
test/sql/: sketch2.test
tutorial/: README.md  duckdb_tutorial_utils.py  run_all.py  tutorial_05.py  tutorial_06.py  tutorial_07.py  tutorial_08.py
